Convert rasterized font to image

--- a/tools/font/BUILD.bazel
+++ b/tools/font/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 load("//base:copts.bzl", "COPTS")
 
 cc_binary(
@@ -11,4 +12,12 @@ cc_binary(
         "//base:tool",
         "@freetype",
     ],
+)
+
+go_binary(
+    name = "font",
+    srcs = [
+        "font.go",
+    ],
+    data = [":raster"],
 )
