Rename output file to Thornmarked

--- a/game/Makefile
+++ b/game/Makefile
@@ -1,4 +1,6 @@
-all: thorn.n64
+name := Thornmarked
+
+all: $(name).n64
 clean:
 	rm -f codesegment.o main.o
 .PHONY: all clean
@@ -15,6 +17,6 @@ CFLAGS += -O2 -D_FINALROM
 codesegment.o: main.o
 	$(CC) -nostdlib -r -o $@ $^ ../sdk/ultra/lib/libgultra_rom.a /opt/n64/lib/gcc/mips32-elf/10.2.0/libgcc.a
 
-thorn.n64: spec codesegment.o
+$(name).n64: spec codesegment.o
 	spicy -r $@ spec --toolchain-prefix=mips32-elf-
 	makemask $@
