Move font rasterizer to subdirectory
This just makes the Go tools easier to work with.

--- a/tools/font/BUILD.bazel
+++ b/tools/font/BUILD.bazel
@@ -1,25 +1,11 @@
-load("@rules_cc//cc:defs.bzl", "cc_binary")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("//base:copts.bzl", "COPTS")
-
-cc_binary(
-    name = "raster",
-    srcs = [
-        "raster.c",
-    ],
-    copts = COPTS,
-    deps = [
-        "//base:tool",
-        "@freetype",
-    ],
-)
 
 go_binary(
     name = "font",
     srcs = [
         "font.go",
     ],
-    data = [":raster"],
+    data = ["//tools/font/raster"],
     deps = [
         "//tools/rectpack",
     ],
