--- a/tools/font/BUILD.bazel
+++ b/tools/font/BUILD.bazel
@@ -7,6 +7,7 @@ go_binary(
         "font.go",
     ],
     data = ["//tools/font/raster"],
+    visibility = ["//visibility:public"],
     deps = [
         "//tools/font/charset",
         "//tools/rectpack",
