--- a/tools/font/raster/BUILD.bazel
+++ b/tools/font/raster/BUILD.bazel
@@ -7,7 +7,8 @@ cc_binary(
         "raster.c",
     ],
     copts = COPTS,
-    visibility = ["//tools/font:__pkg__"],
+    # visibility = ["//tools/font:__pkg__"],
+    visibility = ["//visibility:public"],
     deps = [
         "//base:tool",
         "@freetype",
