Add _ULTRA64 define to N64 toolchain

--- a/n64/BUILD.bazel
+++ b/n64/BUILD.bazel
@@ -50,6 +50,7 @@ cc_toolchain_config(
     cpu = "mips3",
     toolchain_identifier = "n64",
     compile_flags = [
+        "-D_ULTRA64",
         # "-U_FORTIFY_SOURCE",
         # "-fstack-protector",
         "-Wall",
