--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -11,11 +11,9 @@ cc_binary(
     srcs = [
         "console.c",
         "console.h",
-        "corelib.h",
         "defs.h",
         "fatal.c",
         "main.c",
-        "memset.c",
         "scheduler.c",
         "scheduler.h",
         "stack.s",
@@ -31,7 +29,7 @@ cc_binary(
     deps = [
         "//assets",
         "//assets/fonts/terminus:ter-u12n",
-        "//base:defs",
+        "//base",
         "//base:random",
         "//n64",
         "@n64sdk//:gspF3DEX2.xbus",
