Move F3DEX_GBI_2 define to libultra
Every file we build needs this definition. Putting it in the library
rule means that we know every dependency will get it.

--- a/n64/BUILD.bazel
+++ b/n64/BUILD.bazel
@@ -5,6 +5,7 @@ load(":cc_toolchain_config.bzl", "cc_toolchain_config")
 cc_library(
     name = "libultra",
     srcs = ["start.s"],
+    defines = ["F3DEX_GBI_2"],
     visibility = ["//visibility:public"],
     deps = ["@n64sdk//:libultra"],
 )
