Extract console module, write unit tests
This expands the debugger console to add most of the standard features
from C's printf. The functionality is tested with a unit test. A unit
test framework is added which runs on the Nintendo 64. This is all one
change because it is tied so closely together: the test framework relies
on the console library in order to display test output on the N64.

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -9,8 +9,6 @@ alias(
 cc_binary(
     name = "Thornmarked.elf",
     srcs = [
-        "console.c",
-        "console.h",
         "defs.h",
         "fatal.c",
         "main.c",
@@ -22,9 +20,9 @@ cc_binary(
     copts = COPTS,
     deps = [
         "//assets",
-        "//assets/fonts/terminus:ter-u12n",
         "//base",
         "//base:random",
+        "//base/console",
         "//n64:libultra",
         "@n64sdk//:gspF3DEX2.xbus",
         "@n64sdk//:rspboot",
