Extract pak loader into separate library

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -21,6 +21,7 @@ cc_binary(
         "//assets",
         "//base",
         "//base:random",
+        "//base/pak",
         "//n64:libultra",
         "@n64sdk//:gspF3DEX2.xbus",
         "@n64sdk//:rspboot",
