Add script to build and test everything

--- a/experimental/audio/BUILD.bazel
+++ b/experimental/audio/BUILD.bazel
@@ -8,6 +8,7 @@ cc_binary(
         "stack.s",
     ],
     copts = COPTS,
+    visibility = ["//:__pkg__"],
     deps = [
         "//base",
         "//n64:libultra",
