Extract getpath library

--- a/tools/font/BUILD.bazel
+++ b/tools/font/BUILD.bazel
@@ -11,6 +11,7 @@ go_binary(
     visibility = ["//visibility:public"],
     deps = [
         "//tools/font/charset",
+        "//tools/getpath",
         "//tools/rectpack",
         "//tools/texture",
     ],
