--- a/experimental/audio/BUILD.bazel
+++ b/experimental/audio/BUILD.bazel
@@ -30,15 +30,14 @@ cc_binary(
         "stack.s",
     ],
     copts = COPTS,
-    visibility = ["//:__pkg__"],
     deps = [
         "//base",
         "//base:scheduler",
         "//base/pak",
         "//n64:libultra",
-        "@n64sdk//:aspMain",
-        "@n64sdk//:gspF3DEX2.xbus",
-        "@n64sdk//:rspboot",
+        "//sdk:aspMain",
+        "//sdk:gspF3DEX2.xbus",
+        "//sdk:rspboot",
     ],
 )
 
@@ -46,4 +45,5 @@ n64_rom(
     name = "audio",
     data = ":assets.dat",
     program = ":audio.elf",
+    visibility = ["//:__pkg__"],
 )
