--- a/base/BUILD.bazel
+++ b/base/BUILD.bazel
@@ -82,6 +82,7 @@ cc_library(
     name = "tool",
     srcs = [
         "die.c",
+        "pack32.c",
         "swap16.c",
         "swap16arr.c",
         "swap32.c",
