Get ADPCM streaming to work
It seems to be rock solid on the console, but not so great in emulators.

--- a/assets/music/BUILD.bazel
+++ b/assets/music/BUILD.bazel
@@ -27,6 +27,7 @@ NAMES = [
         "//tools/audio/encode:vadpcm_enc",
         "//tools/audio/tabledesign",
     ],
+    visibility = ["//visibility:public"],
 ) for name in NAMES]
 
 [genrule(
