--- a/assets/BUILD.bazel
+++ b/assets/BUILD.bazel
@@ -1,22 +1,21 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
-SRCS = [
-    "//assets/test:Ariella_32x32",
-    "//assets/test:Ball",
-    "//assets/fonts/grenze_gotisch:grenze_gotisch.font",
-]
-
 genrule(
     name = "assets_files",
-    srcs = ["manifest.txt"] + SRCS,
+    srcs = [
+        "manifest.txt",
+        "//assets/test:Ariella_32x32",
+        "//assets/test:Ball",
+        "//assets/fonts/grenze_gotisch:grenze_gotisch.font",
+    ],
     outs = [
         "assets.dat",
         "assets.h",
     ],
-    cmd = ("$(location //tools/makepak) " +
-           "$(location assets.dat) $(location assets.h) " +
-           "$(location manifest.txt)  " +
-           " ".join(["$(locations %s)" % src for src in SRCS])),
+    cmd = ("$(execpath //tools/makepak) " +
+           "-dir $(GENDIR)/assets " +
+           "$(location manifest.txt) " +
+           "$(location assets.dat) $(location assets.h)"),
     tools = ["//tools/makepak"],
     visibility = ["//game:__pkg__"],
 )
