--- a/tools/makepak/BUILD.bazel
+++ b/tools/makepak/BUILD.bazel
@@ -5,5 +5,8 @@ go_binary(
     srcs = [
         "makepak.go",
     ],
+    deps = [
+        "//tools/audio",
+    ],
     visibility = ["//visibility:public"],
 )
