Extract game into separate module

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -12,6 +12,8 @@ cc_binary(
     name = "Thornmarked.elf",
     srcs = [
         "defs.h",
+        "game.c",
+        "game.h",
         "main.c",
         "stack.s",
         "text.c",
