Convert, load, and draw imported mesh
The asset converter now converts models to display lists, which can be
loaded and directly executed.

--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -4,12 +4,23 @@ load("//base:copts.bzl", "CXXOPTS")
 cc_binary(
     name = "modelconvert",
     srcs = [
+        "gbi.cpp",
+        "gbi.hpp",
+        "mesh.cpp",
+        "mesh.hpp",
+        "mesh_batch.cpp",
+        "mesh_emit.cpp",
+        "mesh_import.cpp",
         "modelconvert.cpp",
     ],
     copts = CXXOPTS,
+    visibility = ["//visibility:public"],
     deps = [
+        "//tools/util:bswap",
         "//tools/util:flag",
+        "//tools/util:hash",
         "//tools/util:quote",
         "@assimp",
+        "@fmt",
     ],
 )
