--- a/assets/BUILD.bazel
+++ b/assets/BUILD.bazel
@@ -4,6 +4,7 @@ genrule(
     name = "assets_files",
     srcs = [
         "manifest.txt",
+        "//assets/models:logo",
         "//assets/test:Ariella_32x32",
         "//assets/test:Ball",
         "//assets/fonts/grenze_gotisch:grenze_gotisch.font",
