--- a/base/pak/BUILD.bazel
+++ b/base/pak/BUILD.bazel
@@ -12,6 +12,7 @@ cc_library(
     copts = COPTS,
     visibility = ["//visibility:public"],
     deps = [
+        "//base",
         "//n64:libultra",
     ],
 )
