--- a/assets/models/BUILD.bazel
+++ b/assets/models/BUILD.bazel
@@ -1,9 +1,9 @@
-package(default_visibility=["//assets:__pkg__"])
+package(default_visibility = ["//assets:__pkg__"])
 
 genrule(
     name = "logo",
     srcs = ["logo.fbx"],
     outs = ["logo.dat"],
+    cmd = "$(location //tools/modelconvert) -model $< -output $@ -scale 100",
     tools = ["//tools/modelconvert"],
-    cmd = "$(location //tools/modelconvert) -model $< -output $@",
 )
