Write Bazel rule for fonts

--- a/assets/BUILD.bazel
+++ b/assets/BUILD.bazel
@@ -7,7 +7,7 @@ genrule(
         "//assets/models:logo",
         "//assets/test:Ariella_32x32",
         "//assets/test:Ball",
-        "//assets/fonts/grenze_gotisch:grenze_gotisch.font",
+        "//assets/fonts/grenze_gotisch",
     ],
     outs = [
         "assets.dat",
