--- a/assets/fonts/grenze_gotisch/BUILD.bazel
+++ b/assets/fonts/grenze_gotisch/BUILD.bazel
@@ -3,9 +3,9 @@ load("//tools/font:defs.bzl", "bitmap_font")
 bitmap_font(
     name = "grenze_gotisch",
     src = "GrenzeGotisch-Medium.ttf",
-    size = 20,
-    format = "i.4",
-    texsize = (64, 128),
     charset = "//assets/fonts:charset.txt",
+    font_size = "20",
+    format = "i.4",
+    texsize = "64:128",
     visibility = ["//assets:__pkg__"],
 )
