--- a/assets/music/BUILD.bazel
+++ b/assets/music/BUILD.bazel
@@ -1,47 +1,26 @@
-RATE = 32000
+load(":defs.bzl", "audio_tracks")
 
-NAMES = [
-    "01_Surrender_of_Innocence",
-    "02_Underground_Tension",
-    "03_Progression",
-    "04_Under_the_Moon",
-    "05_Descent_Into_Madness",
-]
-
-[genrule(
-    name = name + "_pcm",
-    srcs = [name + ".flac"],
-    outs = [name + ".aifc"],
-    cmd = ("$(execpath @tools//:flac) --silent --decode $< --output-name $(RULEDIR)/temp.wav; " +
-           "$(execpath @tools//:sox) $(RULEDIR)/temp.wav --bits 16 --rate %d --channels 1 $@" % RATE),
-    tools = [
-        "@tools//:flac",
-        "@tools//:sox",
+audio_tracks(
+    name = "music",
+    srcs = [
+        "01_Surrender_of_Innocence.flac",
+        "02_Underground_Tension.flac",
+        "03_Progression.flac",
+        "04_Under_the_Moon.flac",
+        "05_Descent_Into_Madness.flac",
     ],
-) for name in NAMES]
-
-[genrule(
-    name = name + "_adpcm",
-    srcs = [name + ".aifc"],
-    outs = [name + "_adpcm.aifc"],
-    cmd = ("$(execpath //tools/audio/tabledesign) $< >$(RULEDIR)/codebook.txt; " +
-           "$(execpath //tools/audio/encode:vadpcm_enc) -c $(RULEDIR)/codebook.txt $< $@; " +
-           "rm $(RULEDIR)/codebook.txt"),
-    tools = [
-        "//tools/audio/encode:vadpcm_enc",
-        "//tools/audio/tabledesign",
-    ],
+    rate = "32000",
     visibility = ["//visibility:public"],
-) for name in NAMES]
+)
 
-[genrule(
-    name = name + "_dec",
-    srcs = [name + "_adpcm.aifc"],
-    outs = [name + "_dec.wav"],
-    cmd = ("$(execpath //tools/audio/encode:vadpcm_dec) $< >$(RULEDIR)/temp.pcm; " +
-           "$(execpath @tools//:sox) --type raw --bits 16 --rate %d --encoding signed -B $(RULEDIR)/temp.pcm $@" % RATE),
-    tools = [
-        "//tools/audio/encode:vadpcm_dec",
-        "@tools//:sox",
-    ],
-) for name in NAMES]
+# [genrule(
+#     name = name + "_dec",
+#     srcs = [name + "_adpcm.aifc"],
+#     outs = [name + "_dec.wav"],
+#     cmd = ("$(execpath //tools/audio/encode:vadpcm_dec) $< >$(RULEDIR)/temp.pcm; " +
+#            "$(execpath @tools//:sox) --type raw --bits 16 --rate %d --encoding signed -B $(RULEDIR)/temp.pcm $@" % RATE),
+#     tools = [
+#         "//tools/audio/encode:vadpcm_dec",
+#         "@tools//:sox",
+#     ],
+# ) for name in NAMES]
