--- a/experimental/audio/BUILD.bazel
+++ b/experimental/audio/BUILD.bazel
@@ -6,11 +6,7 @@ genrule(
     name = "assets_files",
     srcs = [
         "manifest.txt",
-        "//assets/music:01_Surrender_of_Innocence_adpcm",
-        "//assets/music:02_Underground_Tension_adpcm",
-        "//assets/music:03_Progression_adpcm",
-        "//assets/music:04_Under_the_Moon_adpcm",
-        "//assets/music:05_Descent_Into_Madness_adpcm",
+        "//assets/music",
         "//assets/sfx:fanfare",
     ],
     outs = [
