Refactor game interface
- Introduce physics system
- Render models from physics system

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -14,7 +14,10 @@ cc_binary(
         "defs.h",
         "game.c",
         "game.h",
+        "graphics.h",
         "main.c",
+        "physics.c",
+        "physics.h",
         "stack.s",
         "text.c",
     ],
