Add player control

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -20,6 +20,8 @@ cc_binary(
         "physics.h",
         "stack.s",
         "text.c",
+        "walk.c",
+        "walk.h",
     ],
     copts = COPTS,
     deps = [
