Add scale to model format
This way, models can use the full available precision of the vertex
format. The result is scaled in-game. Scale can be configured using
expressions to make things easier (e.g. 2/11).

--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -17,6 +17,7 @@ cc_binary(
     visibility = ["//visibility:public"],
     deps = [
         "//tools/util:bswap",
+        "//tools/util:expr",
         "//tools/util:flag",
         "//tools/util:hash",
         "//tools/util:quote",
