--- a/assets/models/BUILD.bazel
+++ b/assets/models/BUILD.bazel
@@ -12,6 +12,6 @@ models(
 models(
     name = "fairy",
     srcs = ["fairy.fbx"],
-    scale = "50",
+    scale = "2/11",  # Model is ~11 units tall.
     use_normals = True,
 )
