Fix modelview matrix scale issues
With lighting enabled, the light directions are scaled by the modelview
matrix before being normalized. Normalization is done in fixed-point, so
the values must not be too large or small.

Previously, the large vertex coordinates forced the modelview matrix to
scale by a very small number (0.002 or so) which meant that lighting
would appear dimmer.

--- a/assets/models/BUILD.bazel
+++ b/assets/models/BUILD.bazel
@@ -2,6 +2,8 @@ load(":defs.bzl", "models")
 
 package(default_visibility = ["//assets:__pkg__"])
 
+METER = "64"
+
 models(
     name = "logo",
     srcs = ["logo.fbx"],
@@ -12,6 +14,6 @@ models(
 models(
     name = "fairy",
     srcs = ["fairy.fbx"],
-    scale = "2/11",  # Model is ~11 units tall.
+    scale = METER + "*2/11",  # Model is ~11 units tall.
     use_normals = True,
 )
