--- a/assets/images/BUILD.bazel
+++ b/assets/images/BUILD.bazel
@@ -1,13 +1,11 @@
+load(":defs.bzl", "textures")
+
 package(default_visibility = ["//assets:__pkg__"])
 
-genrule(
+textures(
     name = "images",
     srcs = [
         "Ground023.png",
     ],
-    outs = [
-        "Ground023.texture",
-    ],
-    tools = ["//tools/textureconvert"],
-    cmd = "$(execpath //tools/textureconvert) -format rgba.16 -output=$@ $<",
+    format = "rgba.16",
 )
