--- a/assets/models/BUILD.bazel
+++ b/assets/models/BUILD.bazel
@@ -5,13 +5,13 @@ package(default_visibility = ["//assets:__pkg__"])
 models(
     name = "logo",
     srcs = ["logo.fbx"],
+    primitive_color = True,
     scale = "100",
-    use_primitive_color = True,
 )
 
 models(
     name = "fairy",
     srcs = ["fairy.fbx"],
+    normals = True,
     scale = "meter*2/11",  # Model is ~11 units tall.
-    use_normals = True,
 )
